[package]
name = "cutter"
version = "0.2.0"
authors = ["Logvinov Alecksey <alecksey@yandex.ru>"]
description = "A simple usefull functions for parsing text. Used for cutting between strings."
repository = "https://github.com/jlogv/cutter"
keywords = ["cut", "parse", "string", "html", "between"]
categories = ["algorithms", "data-structures", "value-formating"]
license = "MIT/Apache-2.0"

[dependencies]
